--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -320,8 +320,8 @@ button:active > img {
 
   .canvas-container {
     width: 100%;
-    height: 77.5vw;
-    min-height: 225px;
+    height: 70vw;
+    min-height: 270px;
     min-width: 300px;
   }
 
@@ -337,6 +337,10 @@ button:active > img {
 }
 
 @media screen and (max-width: 350px) {
+  .canvas-container {
+    min-height: 225px;
+    min-width: 300px;
+  }
   .canvas {
     width: 300px;
     height: 225px;
